# docling-graph

./: .gitignore  404.html  CHANGELOG.md  MAINTAINERS.md  README.md  config.yaml  extraction_invoice.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/: PROBLEM_STATEMENT.md  dependabot.yml  labeler.yml
.github/workflows/: ci.yml  dco.yml  pr-labeler.yml  release.yml  security.yml  semantic-release.yml
01-introduction/: index.html
01-introduction/architecture/: index.html
01-introduction/architecture-overview/: index.html
01-introduction/key-concepts/: index.html
01-introduction/use-cases/: index.html
02-installation/: index.html
02-installation/api-keys/: index.html
02-installation/basic-setup/: index.html
02-installation/gpu-setup/: index.html
02-installation/requirements/: index.html
03-schema-definition/: index.html
03-schema-definition/advanced-patterns/: index.html
03-schema-definition/best-practices/: index.html
03-schema-definition/entities-vs-components/: index.html
03-schema-definition/field-definitions/: index.html
03-schema-definition/relationships/: index.html
03-schema-definition/template-basics/: index.html
03-schema-definition/validation/: index.html
04-pipeline-configuration/: index.html
04-pipeline-configuration/backend-selection/: index.html
04-pipeline-configuration/configuration-basics/: index.html
04-pipeline-configuration/configuration-examples/: index.html
04-pipeline-configuration/docling-settings/: index.html
04-pipeline-configuration/export-configuration/: index.html
04-pipeline-configuration/input-formats/: index.html
04-pipeline-configuration/model-configuration/: index.html
04-pipeline-configuration/processing-modes/: index.html
05-extraction-process/: index.html
05-extraction-process/batch-processing/: index.html
05-extraction-process/chunking-strategies/: index.html
05-extraction-process/document-conversion/: index.html
05-extraction-process/extraction-backends/: index.html
05-extraction-process/model-merging/: index.html
06-graph-management/: index.html
06-graph-management/export-formats/: index.html
06-graph-management/graph-analysis/: index.html
06-graph-management/graph-conversion/: index.html
06-graph-management/neo4j-integration/: index.html
06-graph-management/visualization/: index.html
07-cli/: index.html
07-cli/cli-recipes/: index.html
07-cli/convert-command/: index.html
07-cli/init-command/: index.html
08-api/: index.html
09-examples/: index.html
10-advanced/: index.html
11-reference/: index.html
12-development/: index.html
community/: index.html
concepts/: index.html
docling_graph/: __init__.py  cli.py  config.py  config_template.yaml  graph_exporter.py  pipeline.py  protocols.py
docs/: index.md
examples/: index.html
fundamentals/: index.html
introduction/: index.html
notebooks/: basic_tutorial.ipynb
reference/: index.html
scripts/: graph_converter.py  graph_visualizer.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
templates/: id_card.py  insurance.py  invoice.py
tests/: config.yaml  conftest.py  pytest.ini
usage/: index.html
(+668 files in other folders)
