# This file defines your python project and its CLI entrypoint
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docling_graph"
version = "0.1.0"
description = "A tool to convert documents into knowledge graphs using Docling."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# Add all dependencies from requirements.txt here
dependencies = [
    "docling[vlm]",
    "pydantic",
    "networkx>=3.0",
    "matplotlib>=3.7.0",
    "pyvis>=0.3.2",
    "cosmograph",
    "rich",
    "typer[all]",
    "python-dotenv",
    "ollama",
    "openai",
    "mistralai",
    # "google",
    # "google-genai",
    # "ibm-watson-machine-learning"
]

[project.urls]
homepage = "https://github.com/ayoub-ibm/docling-graph"
repository = "https://github.com/ayoub-ibm/docling-graph"
issues = "https://github.com/ayoub-ibm/docling-graph/issues"
changelog = "https://github.com/ayoub-ibm/docling-graph/blob/main/CHANGELOG.md"

[project.scripts]
docling-graph = "docling_graph.cli.main:main"

[project.optional-dependencies]
# Development tools (linters, formatters, type-checkers) and common developer utilities
dev = [
    "mypy>=1.4.0",
    "ruff>=0.0.280",
    "black>=23.7.0",
    "isort>=5.12.0",
]

# Test stack and utilities
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.0",
    "pytest-timeout>=2.1.0",
    "hypothesis>=6.82.0",
    "pytest-asyncio>=0.21.0",
    "freezegun>=1.2.2",
    "responses>=0.23.0",
    "faker>=19.0.0",
    "types-PyYAML",
    "types-requests",
    # Some teams also install type checkers via test extras
    "mypy>=1.4.0",
]

# Notebook-related tools and data analysis helpers
notebook = [
    "notebook",
    "ipython",
    "pandas",
]

[tool.setuptools.packages.find]
include = ["docling_graph*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "docling.*",
    "rich.*",
    "typer.*",
    "yaml.*",
    "mypy.*",
    "pandas.*",
    "networkx.*",
    "matplotlib.*",
    "pyvis.*",
    "cosmograph.*",
    "ollama.*",
    "openai.*",
    "mistralai.*",
    "google-genai.*",
    "google.*"
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
]
ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "ANN401",  # Dynamically typed expressions (Any)
]
